--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-    font-family: futura;
+    font-family: futura-light;
     src: url(Futura.ttx);
     font-weight: bold;
 }
@@ -12,7 +12,13 @@
 @font-face {
     font-family: futura-light;
     src: url(FuturaLight.ttf);
-    font-weight: bold;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: futara-light;
+    src: url(Futura Light Italic font.ttf);
+    font-style: italic;
 }
 
 *,
@@ -48,11 +54,27 @@ main {
 a {
   text-decoration: none;
   color: #4A4A4A;
-  font-size: 1.25em;
+  font-size: 1.25rem;
+}
+
+b {
+  font-family: 'futura-light', sans-serif;
+  font-weight: bold;
+}
+
+em {
+  font-family: 'futura-light', sans-serif;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.hero-content h1 {
+  font-size: 3vw;
+  text-align: center;
 }
 
 h1 {
-  font-size: 3vw;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -91,7 +113,7 @@ header nav ul > li {
 header a{
   text-align: center;
   letter-spacing: 2px;
-
+  font-size: 1.5rem;
 }
 
 /* hero */
@@ -166,7 +188,7 @@ h1 span:hover:before {
   letter-spacing: 1.5px;
   text-align: center;
   padding-top: 3vw;
-  font-size: 3.5vw;
+  font-size: 2rem;
   color: #4A4A4A;
 }
 
@@ -188,9 +210,8 @@ overflow: hidden;
 }
 
 .project {
-  background: #4B4B4B;
+  border: 1px dotted gray;
   height: 35vw;
-  width: 45vw;
  margin: 1%;
 }
 
@@ -236,15 +257,17 @@ padding: 2em 0;
   padding: 1vw;
 }
 
-.skill h3 {
+h3 {
   text-align: center;
+  font-size: 1.5rem;
+  padding-bottom: 5px;
 }
 
-.skill p {
+ p {
   text-align: left;
   font-family: 'FuturaLight', sans-serif;
-  font-size: 14px;
-
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 .skill img {
@@ -252,7 +275,7 @@ padding: 2em 0;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 1em 0;
+  padding: 1rem 0;
 }
 
 .thanks {
@@ -261,16 +284,23 @@ padding: 2em 0;
   padding: 4vw 0;
   background: url(../images/background_pink.svg);
   background-size: cover;
+
+}
+
+.swing {
+ animation: swing infinite 5s;
 }
 
 .thanks p {
   font-weight: 600;
   text-align: center;
   position: absolute;
-  top: 4vw;
+  top: .8vw;
   font-size: 2.5vw;
   display: inline;
   transform: translate(40.75vw , 16vw) rotate(-13deg);
+  font-family: 'orator-std', monospace;
+  line-height: 1;
 }
 
 .thanks img {
@@ -278,7 +308,157 @@ padding: 2em 0;
   margin-left: auto;
   margin-right: auto;
   display: block;
+
 }
+
+.intro{
+  background: #FFF5F4;
+  display: flex;
+  justify-content:space-around;
+  position: relative;
+  flex-direction: column;
+  height: 100%;
+}
+
+.frame-container {
+  display: inline-flex;
+  justify-content: center;
+  position: relative;
+  top: 5vw;
+  height: 100%;
+  padding: 1.5vw 1;
+  margin-bottom: 5vw;
+}
+
+.frame {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline;
+  width: 35vw;
+  height: 28vw;
+  background: white;
+  border: 1px solid black;
+
+}
+
+.frame-back {
+ content: "";
+ background: white;
+ border: 1px solid black;
+ height: 28vw;
+ width: 35vw;
+ top: 1vw;
+ left: 33.5vw;
+ position: absolute;
+ display: inline;
+
+}
+
+.frame div {
+  height: 20vw;
+  width: 30vw;
+  background: gray;
+  position: absolute;
+  top: 2vw;
+  left: 2.5vw;
+}
+
+
+
+.text-container {
+  padding: 4rem;
+  height: 100%;
+  display: block;
+}
+
+.text-container h1,
+.text-container h3,
+.text-container p {
+  padding: 1rem;
+}
+
+.facts {
+  padding: 1% 0;
+}
+
+.fact-group {
+  display: inline;
+  width: 30%;
+  height: 100%;
+  padding: 5%;
+
+}
+
+.fact-group ul {
+  list-style: circle;
+  font-family: 'FuturaLight', sans-serif;
+  font-size: 1rem;
+  padding: 2%;
+
+}
+
+.fact-group ul > li {
+  line-height: 1.6;
+}
+
+.fact-group img {
+  width: 25%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 2rem;
+}
+
+.fun-facts {
+  background: #F1FBFE;
+  justify-content: space-around;
+}
+
+.frame-container2 {
+  display: inline-flex;
+  justify-content: center;
+  position: relative;
+  top: 5vw;
+  height: 100%;
+  padding-bottom: 5%;
+  margin-bottom: 5vw;
+}
+
+.frame2 {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline;
+  width: 28vw;
+  height: 35vw;
+  background: white;
+  border: 1px solid black;
+
+}
+
+.frame-back2 {
+ content: "";
+ background: white;
+ border: 1px solid black;
+ height: 35vw;
+ width: 28vw;
+ top: 1vw;
+ left: 1vw;
+ position: absolute;
+ display: inline;
+
+}
+
+.frame2 div {
+  height: 30vw;
+  width: 20vw;
+  background: gray;
+  position: absolute;
+  top: 2vw;
+  left: 2.5vw;
+}
+
 /* footer */
 
 footer {
@@ -289,7 +469,7 @@ footer {
   height: 10vw;
   display: flex;
   justify-content: center;
-  background: #F7ECAD;
+  background: white/*#FBF5D6*/;
 }
 
 footer div {
@@ -333,4 +513,54 @@ footer div {
   margin-left: auto;
   height: 3vw;
   padding-bottom: 1vw;
+}
+
+.spin:hover {
+  animation: spin 2s 3;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+/* media queries */
+@media (max-width: 1043px) {
+  html {
+    font-size: 100%;
+  }
+}
+
+@media (max-width: 912px) {
+  html { font-size: 85%; }
+}
+
+@media (max-width: 578px) {
+  html { font-size: 20px; }
+
+  .first-row,
+  .second-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0;
+  }
+
+  .nav { height: 700px; }
+  .skill { padding: 5%; }
+
+  .skill img { width: 15%; }
+
+  .hero-content { height: 60vw; }
+
+  .thanks { height: 50vw; }
+
+  .footer-text { font-size: 1.5rem; }
 }
