contact button mailto update

--- a/styles/style.css
+++ b/styles/style.css
@@ -400,6 +400,7 @@ h3 {
 
 .fact-group ul > li {
   line-height: 1.6;
+  padding: 10px;
 }
 
 .fact-group img {
@@ -413,6 +414,11 @@ h3 {
 .fun-facts {
   background: #F1FBFE;
   justify-content: space-around;
+  width: 100%;
+}
+
+.fun-facts .fact-group {
+  width: 40%
 }
 
 .frame-container2 {
@@ -469,7 +475,7 @@ footer {
   height: 10vw;
   display: flex;
   justify-content: center;
-  background: white/*#FBF5D6*/;
+  background: #FBF5D6;
 }
 
 footer div {
