--- a/styles/style.css
+++ b/styles/style.css
@@ -68,43 +68,133 @@ em {
   font-style: italic;
 }
 
-.hero-content h1 {
-  font-size: 3vw;
-  text-align: center;
-}
 
 h1 {
   font-size: 2rem;
   text-align: center;
 }
 
+h2 {
+  letter-spacing: 1.5px;
+  text-align: center;
+  font-size: 2rem;
+  color: #4A4A4A;
+}
+
+h3 {
+  text-align: center;
+  font-size: 1.5rem;
+  padding-bottom: 5px;
+}
+
+ p {
+  text-align: left;
+  font-family: 'FuturaLight', sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
 .hilight {
   background-color: #F7ECAD;
 }
+
+.pad {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 /* nav */
 
-header {
+header,
+.case-nav {
   height: 6vw;
   display: flex;
   justify-content: center;
   position: relative;
 }
 
-header nav{
+header nav {
   position: absolute;
   bottom: .5vw;
   padding:1.75vw;
   display: block;
 }
 
-header nav ul {
+ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.5s ease;
+  margin: 0;
+  right: 10%;
+  display: none;
+  z-index: 1;
+  background: #F7ECAD;
+  width: 9rem;
+  border-radius: 4px;
+}
+
+
+ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+
+.dropdown{
+  padding: 0;
+}
+.dropdown li {
+  clear: both;
+  width: 100%;
+  text-align: left;
+  padding: 10%;
+  margin: 0;
+}
+
+.dropdown li a {
+  letter-spacing: 1px;
+  font-family: 'futara-light', sans-serif;
+  font-size: 1.25rem;
+}
+
+.dropdown::after {
+  content: " ";
+    position: absolute;
+    border-style: solid;
+    border-width: 0 8px 8px;
+    border-color: #F7ECAD transparent;
+    display: block;
+    width: 0;
+    z-index: 1;
+    top: -8px;
+    right: 10px;
+}
+
+.dropdown li:hover {
+  background: #F2E077;
+  cursor: pointer;
+}
+
+.dropdown li:first-child:hover {
+  border-radius: 4px 4px 0 0;
+}
+
+.dropdown li:nth-child(3):hover {
+  border-radius: 0 0 4px 4px;
+}
+
+header nav ul,
+.case-nav ul,
+.bar{
     display:inline;
     padding-top: 1vw;
     margin-right:20px;
     font-weight:300;
 }
 
-header nav ul > li {
+header nav ul > li,
+.case-nav ul > li{
     list-style-type: none;
     display: inline-block;
     margin: 0 15px;
@@ -115,6 +205,7 @@ header a{
   letter-spacing: 2px;
   font-size: 1.5rem;
 }
+
 
 /* hero */
 
@@ -185,11 +276,7 @@ h1 span:hover:before {
   height: 10vw;
 }
 .title h2 {
-  letter-spacing: 1.5px;
-  text-align: center;
   padding-top: 3vw;
-  font-size: 2rem;
-  color: #4A4A4A;
 }
 
 .work-content {
@@ -245,6 +332,7 @@ padding: 2em 0;
   border: 1px solid black;
   border-radius: 4vw;
   padding: 1.25vw 6vw;
+  color:  black;
 }
 
 .skills {
@@ -257,18 +345,6 @@ padding: 2em 0;
   padding: 1vw;
 }
 
-h3 {
-  text-align: center;
-  font-size: 1.5rem;
-  padding-bottom: 5px;
-}
-
- p {
-  text-align: left;
-  font-family: 'FuturaLight', sans-serif;
-  font-size: 1rem;
-  line-height: 1.5;
-}
 
 .skill img {
   width: 18%;
@@ -390,7 +466,8 @@ h3 {
 
 }
 
-.fact-group ul {
+.fact-group ul,
+main.case ul {
   list-style: circle;
   font-family: 'FuturaLight', sans-serif;
   font-size: 1rem;
@@ -398,7 +475,8 @@ h3 {
 
 }
 
-.fact-group ul > li {
+.fact-group ul > li,
+main.case ul > li {
   line-height: 1.6;
   padding: 10px;
 }
@@ -464,6 +542,175 @@ h3 {
   top: 2vw;
   left: 2.5vw;
 }
+
+/* case study */
+
+.bar {
+  height: 4vw;
+  background: #FFF5F4;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+}
+
+.bar h3 {
+  opacity: .5;
+  position: absolute;
+  bottom: 1vw;
+  margin: auto;
+  display: block;
+}
+
+.case-nav {
+  background: #F1FBFE;
+  height: 4vw;
+}
+
+.case-banner {
+ display: block;
+ height: 15rem;
+ position: relative;
+ background: grey;
+ background-size: cover;
+}
+
+.overview h1 {
+  margin-top: 92px;
+    margin-bottom: 80px;
+    font-size: 3.5rem;
+    text-align: center;
+    letter-spacing: 2.8px;
+}
+
+.overview h2 {
+  font-family: 'futara-light', sans-serif;
+  margin-bottom: 80px;
+    font-size: 1.25rem;
+    line-height: 40px;
+    letter-spacing: 1.3px;
+}
+
+main.case h2 {
+  padding: 2rem 0;
+}
+
+main.case section {
+  padding: 2rem 0;
+}
+
+main.case p,
+.overview h2,
+main.case ul {
+  width: 65%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+main.case p,
+main.case ul {
+  padding-bottom: 2rem;
+  line-height: 2rem;
+  font-size: 14px;
+
+}
+
+main.case section.grey,
+.case-nav ul > li:hover {
+  background: #F5F8FA;
+}
+
+main.case ul {
+  padding-top: 0;
+}
+
+
+.user-personas div,
+.user-stories div {
+  display: flex;
+  justify-content: center;
+  width: 75%;
+  margin: auto;
+}
+
+.user-personas img {
+  width: 33%;
+  height: 100%;
+  padding: 0 5px 3rem 5px;
+}
+
+.user-stories div img {
+  padding-bottom: 3rem;
+}
+
+.user-personas p,
+.user-stories p,
+.branding p {
+  text-align: center;
+}
+
+.split {
+  display: flex;
+  justify-content: center;
+  padding: 2rem 3rem;
+
+}
+
+main.case .split div {
+  display: inline;
+  width: 50%;
+  margin: 0;
+}
+
+main.case .split div img,
+.flex-col img {
+  margin: auto;
+  display: block;
+
+}
+
+.reverse {
+  flex-direction: row-reverse;
+}
+
+.text-section,
+.image-section {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  height: 100%;
+  justify-content: center;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.competitive-analysis .image-section img {
+  width: 30%;
+}
+
+hr {
+  margin: auto;
+  width: 75%;
+  height: 1px;
+  background-color: #fff;
+	border-top: 2px dashed #8c8b8b;
+  border-bottom: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  padding-top: .5rem;
+}
+
+section.branding2 h2 {
+  padding-bottom: 0;
+  position: relative;
+
+}
+
 
 /* footer */
 
